NOJIRA: Added styling for the high contrast themes. Tooltip with question mark should be fixed.

--- a/css/SubtitleWidget.css
+++ b/css/SubtitleWidget.css
@@ -1,6 +1,12 @@
 .fl-subtitle-mainWrap {
     display: table-cell;
 }
+
+/* should be fixed */
+.fl-subtitle-panel-menu-tooltip{
+    display: none;
+}
+
 .fl-subtitle-panel-languages {
     position: absolute;
 }
@@ -17,13 +23,19 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
 }
 .fl-subtitle-panel-menu {
     background-color: #E6E6E6;
-    padding: 0.5em;
     color: #A7A7A7;
     border-color: #E0E0E0;
     border-width: 0.125em;
     border-style: solid;
     width: 12.5em;
     text-shadow: #ffffff 0.063em 0.063em 0.063em;
+}
+.fl-subtitle-panel-menu span {
+    padding: 0.5em;
+    display: block;
+}
+.fl-subtitle-panel-menu span:hover {
+    color: #9BCB37;
 }
 .fl-subtitle-panel-languages {
     list-style-type: none;
@@ -37,6 +49,7 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     text-decoration: none;
     background-color: #E6E6E6;
     background-image: url(../images/pencil-default.png);
+    background-size: 0.563em 0.938em;
     background-repeat: no-repeat;
     background-position: 0.656em center;
     padding: 0.5em 0.5em 0.5em 1.875em;
@@ -46,7 +59,7 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     border-style: solid;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 10.188em;
+    width: 9.375em;
     min-height: 1.188em;
 }
 .fl-subtitle-panel-languages li a:hover {
@@ -55,17 +68,23 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
 }
 .fl-subtitle-panel-languages li a.fl-subtitle-panel-addSubtitle {
     background-image: url(../images/arrow-default.png);
+    background-size: 0.688em 0.563em;
 }
 .fl-subtitle-panel-languages li a.fl-subtitle-panel-addSubtitle:hover {
     background-image: url(../images/arrow-hover.png);
+    background-size: 0.688em 0.563em;
 }
 .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle {
     text-decoration: none;
     background-image: url(../images/arrow-default.png);
+    background-size: 0.688em 0.563em;
     background-repeat: no-repeat;
     background-position: 0.5em center;
     padding: 0.5em 0.5em 0.5em 1.875em;
     color: #4091C4;
+    width: 10.188em;
+    min-height: 1.188em;
+    display: block;
 }
 .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle:hover {
     background-image: url(../images/arrow-hover.png);
@@ -103,6 +122,9 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     color: white !important;
     background-color: black !important;
 }
+.fl-theme-uio-bw .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle {
+    background-image: url(../images/arrow-black.png);
+}
 .fl-theme-uio-bw .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle:hover {
     background-image: url(../images/arrow-white.png);
     color: white !important;
@@ -117,6 +139,9 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     background-image: url(../images/arrow-yellow.png);
     color: yellow !important;
     background-color: black !important;
+}
+.fl-theme-uio-by .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle {
+    background-image: url(../images/arrow-black.png);
 }
 .fl-theme-uio-by .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle:hover {
     background-image: url(../images/arrow-yellow.png);
@@ -142,6 +167,9 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     background-image: url(../images/arrow-black.png);
     color: black !important;
     background-color: white !important;
+}
+.fl-theme-uio-wb .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle {
+    background-image: url(../images/arrow-white.png);
 }
 .fl-theme-uio-wb .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle:hover {
     background-image: url(../images/arrow-black.png);
@@ -172,6 +200,9 @@ div.fl-subtitle-widgetWrap, div.fl-subtitle-mainWrap, div.fl-subtitle-panel, div
     background-image: url(../images/arrow-black.png);
     color: black !important;
     background-color: yellow !important;
+}
+.fl-theme-uio-yb .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle {
+    background-image: url(../images/arrow-yellow.png);
 }
 .fl-theme-uio-yb .fl-subtitle-panel-menu .fl-subtitle-panel-addSubtitle:hover {
     background-image: url(../images/arrow-black.png);
